remove angle tilt on role, fix alignment accordingly

--- a/src/latestGames.scss
+++ b/src/latestGames.scss
@@ -133,7 +133,6 @@ $winningGreen: rgba(129,196,0, .6);
 	}
 
 	.hero-role {
-		transform: rotate(-45deg);
 		font-size: 10pt;
 		text-align: center;
 		width: 100%;
